--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "prettier": "^3.4.2",
     "svelte": "^5.2.7",
     "vite": "^6.0.1"
   },
